# agent-minimal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEAM-ONBOARDING.md  agent.py  docker-compose.yml  flow.yml  pyproject.toml  server.py
agents/: __init__.py
agents/alpha/: __init__.py
agents/alpha/_core/: __init__.py  intent.py  itinerary.py  llm.py  storage.py  understanding.py
agents/bravo/: __init__.py
agents/bravo/_chain/: agent.py  graph_executor.py  llm.py  memory.py  state.py  tools.py  trajectory.py
agents/charlie/: __init__.py
agents/delta/: __init__.py
deploy/: agent-minimal.service
docs/: agent-tutorial.md  api-contract.md  deploy.md  lessons横向串讲-从映射看1-10.md  sample-log.json
docs/alpha/: PRD.md  S1-S4.1-工作总结.md  S1-能力边界详细设计.md  S2-最简规划详细设计.md  S3-缺失追问详细设计.md  S4-DB部署方案.md  S4-多会话持久化详细设计.md  S4.1-历史会话列表修复设计.md  T1-映射核详细设计.md  任务拆分.md  技术方案.md
docs/superpowers/plans/: 2026-06-02-minimal-react-frontend.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/agents/: agent-api-contract.test.ts  agent-file-layout.test.ts
frontend/src/app/: AgentsIndexPage.tsx  App.tsx  (+2 more)
python-minimal/: .gitignore  README.md  pyproject.toml
python-minimal/tests/: test_core.py
scripts/: demo_online_db.py
src/word_count/: __init__.py
tests/: test_alpha_llm.py  test_alpha_s1.py  test_alpha_s2.py  test_alpha_s3.py  test_alpha_s4_sessions.py  test_alpha_s4_storage.py  test_static_frontend.py
(+32 files in other folders)
