[project]
name = "agent-minimal"
version = "0.1.0"
description = "Minimal multi-agent backend skeleton: FastAPI routing + 4 independent agent modules."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # alpha:
    "openai>=1.0",
    "python-dotenv>=1.0",
]

# 应用模式:本项目就是个跑起来的服务,不需要打成 pip 包
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# 云效流水线的 SetupPython 会把 Python 装在工作区,排除掉以免 ruff 扫到
extend-exclude = ["Python", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
